@@ -1,10 +1,10 @@
 
 #ifdef WIN32
-#define OLDEST "200501200"
+#define OLDEST "201608140"
 #endif
 
 #ifdef OSX
-#define OLDEST "200501200"
+#define OLDEST "201608140"
 #endif
 
 #ifdef LINUX
